// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing GifExpertApp should render the component correctly 1`] = `
<div
  className="m-5"
>
  <div
    className="head-app"
  >
    <h2>
      GifExpertApp
    </h2>
    <AddCategory
      setCategories={[Function]}
    />
    <hr />
  </div>
  <ol />
</div>
`;

exports[`Testing GifExpertApp should show a category list 1`] = `
<div
  className="m-5"
>
  <div
    className="head-app"
  >
    <h2>
      GifExpertApp
    </h2>
    <AddCategory
      setCategories={[Function]}
    />
    <hr />
  </div>
  <ol>
    <GifGrid
      category="Simpson"
      key="Simpson"
    />
    <GifGrid
      category="Goku"
      key="Goku"
    />
  </ol>
</div>
`;
